		 play 15.2sec of "foo.wav", starting at position 5sec.
	- added: audio play-at object; "-i:playat,5,foo.wav" will
		 start playing "foo.wav" after position reaches 5sec
	- added: EWF files; ability to specify positions in time in 
		 sample frames; "2.0" is interpreted as 2.0secs while
	         "88200sa" is interpreted as 88200 samples
        - changed: most of the EWF support (Ecasound Wave Files, .ewf) 
		   has been rewritten in this version; numerous bugs
	  	   are fixed
        - changed: eaim - commands 'cop-add' and 'ctrl-add' now allow
		   an alternate syntax: both "-<id_string>:par1,...,parN"
		   and "<id_string>:par1,...,parN" are now accepted
        - changed: ability to write to EWF file is now marked as 
	           a deprecated feature which will be removed in
	           a later release 
	- changed: mechanism to terminate forked child processes; 
		   properly wait for process termination in all 
		   circumstances (previously there were some 
		   unhandled corner cases)
	- changed: major updates to the examples.html page (available
	           also at http://eca.cx/examples )
	- changed: refactored logic for propagating seek events 
		   across chainsetups; warnings are now issued if 
		   one tries to seek objects that do not supports
		   seeking; similarly warning is issued if a given
	 	   audio object type doesn't support sample accurate
		   seeks (for example mp3 inputs have this limitation)
        - changed: updated ecasound(1) man page description of '-klg'
        - fixed: incorrect usage of the Python C API, which leads to
	 	 segfaults when pyecasound is used under python2.5;
		 fixes Debian bug #468965
        - fixed: bugs in ewf-looping code
	- fixed: avoid terminating processing when invalid parameters are 
		 passed to channel copy (chcopy/erc), mix (chmix/erm) and 
	         move (chmove) chainops
	- fixed: eaim - buffering mode was sometimes incorrectly 
		 reported in 'cs-status' output (-B:auto instead of 